--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>React Template</title>
+    <link rel="icon" type="image/webp" href="/src/assets/images/favicon.webp" />
+    <title>Atlas</title>
   </head>
   <body>
     <div id="root"></div>
