--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/webp" href="/src/assets/images/favicon.webp" />
+    <link rel="icon" type="image/webp" href="icon.png" />
+    <link rel="manifest" href="manifest.json" />
+
     <title>Atlas</title>
   </head>
   <body>
