fix: status bar color incorrect

--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="theme-color" content="#0f0f0f" />
+
     <link rel="icon" type="image/webp" href="icon.png" />
     <link rel="manifest" href="manifest.json" />
 
